updated linkedin links

--- a/stablecoin/fdusd/data.yml
+++ b/stablecoin/fdusd/data.yml
@@ -6,6 +6,7 @@ rating: A-
 links:
   website: https://firstdigitallabs.com
   twitter: https://twitter.com/FDLabsHQ
+  linkedin: https://www.linkedin.com/company/first-digital-trust
 whitepaper: https://firstdigitallabs.com/workspace/uploads/FDUSD-Whitepaper-25216064ca0cc8.pdf
 security_report: https://firstdigitallabs.com/workspace/uploads/PeckShield-207912a52540a.pdf
 attestation_report:
