--- a/stablecoin/frax/data.yml
+++ b/stablecoin/frax/data.yml
@@ -7,6 +7,7 @@ links:
   website: https://frax.finance
   twitter: http://twitter.com/fraxfinance
   github: https://github.com/fraxfinance
+  linkedin: https://www.linkedin.com/company/fraxfinance
 whitepaper: https://docs.frax.finance/overview
 security_report: https://github.com/trailofbits/publications/blob/master/reviews/2023-05-fraxgov-securityreview.pdf
 attestation_report:
