--- a/stablecoin/pyusd/data.yml
+++ b/stablecoin/pyusd/data.yml
@@ -6,6 +6,7 @@ rating: A-
 links:
   website: https://www.paypal.com/pyusd
   twitter: https://twitter.com/PayPal
+  linkedin: https://www.linkedin.com/company/paypal/
 whitepaper: https://crypto.com/university/what-is-pyusd-paypal-stablecoin
 security_report: https://github.com/paxosglobal/pyusd-contract/blob/master/audit-reports/Trail_of_Bits_Audit_Report.pdf
 attestation_report:
