--- a/stablecoin/tusd/data.yml
+++ b/stablecoin/tusd/data.yml
@@ -6,6 +6,7 @@ rating: A-
 links:
   website: https://tusd.io
   twitter: http://twitter.com/tusdio
+  linkedin: https://www.linkedin.com/company/archblock/
 whitepaper: https://www.studocu.com/id/document/universitas-terbuka/teknologi-komunikasi-dan-informasi/tusd-white-paper-cryptocurrency/33454002
 security_report:
 attestation_report:
