--- a/stablecoin/usdd/data.yml
+++ b/stablecoin/usdd/data.yml
@@ -6,6 +6,7 @@ rating: A-
 links:
   website: https://usdd.io
   twitter: http://twitter.com/usddio
+  linkedin: https://www.linkedin.com/company/trondao/
 whitepaper: https://usdd.network/USDD-en.pdf
 security_report:
 attestation_report:
