--- a/stablecoin/usde/data.yml
+++ b/stablecoin/usde/data.yml
@@ -6,6 +6,7 @@ rating: A-
 links:
   website: https://www.ethena.fi
   twitter: https://twitter.com/ethena_labs
+  linkedin: https://www.linkedin.com/company/ethena-labs/
 whitepaper: https://ethena-labs.gitbook.io/ethena-labs/
 security_report:
 attestation_report:
