--- a/stablecoin/ust/data.yml
+++ b/stablecoin/ust/data.yml
@@ -5,7 +5,8 @@ logo: assets/logo.png
 rating: A-
 links:
   website: https://www.terra.money
-  twitter: https://twitter.com/ethena_labs
+  twitter: https://twitter.com/terra_money
+  linkedin: https://www.linkedin.com/company/terraform-labs
 whitepaper: https://assets.website-files.com/611153e7af981472d8da199c/618b02d13e938ae1f8ad1e45_Terra_White_paper.pdf
 security_report: https://www.fairyproof.com/doc/TerraCore-Audit-Report-010922.pdf
 attestation_report:
