--- a/stablecoin/usdp/data.yml
+++ b/stablecoin/usdp/data.yml
@@ -6,6 +6,7 @@ rating: A-
 links:
   website: https://paxos.com/usdp/
   twitter: https://twitter.com/PaxosStandard
+  linkedin: https://www.linkedin.com/company/paxos/
 whitepaper: https://standard.paxos.com/whitepaper.pdf
 security_report:
 attestation_report:
