--- a/stablecoin/dai/data.yml
+++ b/stablecoin/dai/data.yml
@@ -3,7 +3,7 @@ name: DAI
 description: Dai is a stable, decentralized currency that does not discriminate.
   Any individual or business can realize the advantages of digital money.
 logo: assets/logo.png
-rating: A-
+rating: A
 links:
   website: https://makerdao.com
   twitter: https://twitter.com/makerdao
