--- a/stablecoin/fdusd/data.yml
+++ b/stablecoin/fdusd/data.yml
@@ -2,7 +2,7 @@
 name: FDUSD
 description: First Digital USD (FDUSD) is a US dollar-pegged stablecoin aiming for stability, programmability, and compliance with regulations, backed by cash and cash equivalents..
 logo: assets/logo.png
-rating: A-
+rating: B
 links:
   website: https://firstdigitallabs.com
   twitter: https://twitter.com/FDLabsHQ
