--- a/stablecoin/frax/data.yml
+++ b/stablecoin/frax/data.yml
@@ -2,7 +2,7 @@
 name: FRAX
 description: FRAX is a unique stablecoin ecosystem using both algorithms and collateralization to maintain a near-peg to the US dollar while offering flexible pegging options and governance through its FXS token
 logo: assets/logo.png
-rating: A-
+rating: B
 links:
   website: https://frax.finance
   twitter: http://twitter.com/fraxfinance
