--- a/stablecoin/pyusd/data.yml
+++ b/stablecoin/pyusd/data.yml
@@ -2,7 +2,7 @@
 name: PyUSD
 description: PayPal USD is designed to maintain a stable $1 USD value. It’s backed by dollar deposits, US treasuries, and cash equivalents.
 logo: assets/logo.png
-rating: A-
+rating: B+
 links:
   website: https://www.paypal.com/pyusd
   twitter: https://twitter.com/PayPal
