--- a/stablecoin/tusd/data.yml
+++ b/stablecoin/tusd/data.yml
@@ -2,7 +2,7 @@
 name: TUSD
 description: TrueUSD is the first USD-pegged stablecoin to deploy daily attestations for its underlying reserves by independent third-party institutions.
 logo: assets/logo.png
-rating: A-
+rating: B+
 links:
   website: https://tusd.io
   twitter: http://twitter.com/tusdio
