--- a/stablecoin/usdc/data.yml
+++ b/stablecoin/usdc/data.yml
@@ -5,7 +5,7 @@ description:
   USDC is fully backed by cash and short-dated U.S. government obligations, so that it is always
   redeemable 1:1 for U.S. dollars.
 logo: assets/logo.png
-rating: A-
+rating: A
 links:
   website: https://www.circle.com/en/usdc
   twitter: https://twitter.com/circle
