--- a/stablecoin/usdd/data.yml
+++ b/stablecoin/usdd/data.yml
@@ -2,7 +2,7 @@
 name: USDD
 description: USDD is an overcollateralized, multi-chain stablecoin with TRON DAO oversight.
 logo: assets/logo.png
-rating: A-
+rating: B-
 links:
   website: https://usdd.io
   twitter: http://twitter.com/usddio
