--- a/stablecoin/usde/data.yml
+++ b/stablecoin/usde/data.yml
@@ -2,7 +2,7 @@
 name: Ethena USDE
 description: Ethena USD is an ethereum enabled crypto-native synthetic dollar which provides an embedded yield to users and achieves price stability through delta-neutral hedging across centralized and decentralized venues
 logo: assets/logo.png
-rating: A-
+rating: B+
 links:
   website: https://www.ethena.fi
   twitter: https://twitter.com/ethena_labs
