--- a/stablecoin/usdp/data.yml
+++ b/stablecoin/usdp/data.yml
@@ -2,7 +2,7 @@
 name: USDP
 description: Pax Dollar (USDP) is a USD-backed stablecoin regulated by NYDFS, offering fast, secure crypto transactions with 1:1 parity to the US dollar.
 logo: assets/logo.png
-rating: A-
+rating: B+
 links:
   website: https://paxos.com/usdp/
   twitter: https://twitter.com/PaxosStandard
