--- a/stablecoin/usdt/data.yml
+++ b/stablecoin/usdt/data.yml
@@ -3,7 +3,7 @@ name: USDT
 description: USDT, also known as Tether, is the stablecoin with the highest
   market capitalization, backed by US dollar.
 logo: assets/logo.png
-rating: A-
+rating: A
 links:
   website: https://tether.to
   twitter: https://twitter.com/Tether_to
