--- a/stablecoin/ust/data.yml
+++ b/stablecoin/ust/data.yml
@@ -2,7 +2,7 @@
 name: Terra USD
 description: TerraUSD (UST)  is the decentralized and algorithmic stablecoin of the Terra blockchain.
 logo: assets/logo.png
-rating: A-
+rating: D
 links:
   website: https://www.terra.money
   twitter: https://twitter.com/terra_money
