--- a/stablecoin/xsgd/data.yml
+++ b/stablecoin/xsgd/data.yml
@@ -2,7 +2,7 @@
 name: XSGD
 description: The XSGD token is a stablecoin pegged to the Singapore Dollar (SGD), created to bridge the traditional financial sector with the digital asset space.
 logo: assets/logo.png
-rating: A-
+rating: B
 links:
   website: https://www.straitsx.com/xsgd
   twitter: https://twitter.com/StraitsX
