--- a/staking/lido/data.yml
+++ b/staking/lido/data.yml
@@ -8,11 +8,9 @@ links:
   discord: https://discord.com/invite/lido
   telegram: https://t.me/lidofinance
   github: https://github.com/lidofinance
-whitepaper: 
-  https://lido.fi/static/Lido:Ethereum-Liquid-Staking.pdf
+whitepaper: https://lido.fi/static/Lido:Ethereum-Liquid-Staking.pdf
 overview: |
-  Lido is primarily a liquid staking solution for Ethereum and Polygon. Products offered include liquid staking derivative token contracts and other auxiliary smart contract infrastructure to support native token staking services.
-Lido’s smart contracts allow users to stake ETH on Ethereum and ERC-20 MATIC on Ethereum to receive the corresponding liquid staking derivative token (i.e., st[token]). The protocol then uses these staked tokens to operate validators on the underlying network, increasing participation in each network’s Proof-of-Stake (PoS) consensus mechanism. As such, Lido’s staking solutions are typically meant for users that are unable to run a validator themselves due to economic or technical limitations.
+  Lido is primarily a liquid staking solution for Ethereum and Polygon. Products offered include liquid staking derivative token contracts and other auxiliary smart contract infrastructure to support native token staking services. Lido’s smart contracts allow users to stake ETH on Ethereum and ERC-20 MATIC on Ethereum to receive the corresponding liquid staking derivative token (i.e., st[token]). The protocol then uses these staked tokens to operate validators on the underlying network, increasing participation in each network’s Proof-of-Stake (PoS) consensus mechanism. As such, Lido’s staking solutions are typically meant for users that are unable to run a validator themselves due to economic or technical limitations.
 history: |
   In October 2020, Lido was introduced through a blog post outlining the flaws and inefficiencies of then-available ETH staking solutions on Ethereum’s Beacon Chain. Jordan Fish, Vasiliy Shapovalov, and Konstantin Lomashuk founded Lido and its DAO to solve the shortcomings of staking, such as illiquidity and high minimum staking requirements (e.g., Ethereum requiring at least 32 ETH to operate a validator). With the introduction of its first liquid staking derivative token, stETH, staked capital could be used in Decentralized Finance (DeFi) applications. The project’s initial team members raised $2.00 million in December 2020 to continue building the protocol.
   On Dec. 18, 2020, the liquid staking protocol went live on Ethereum and later expanded to support Polygon, Solana, Terra, Kusama, and Polkadot. However, it is worth noting that:
@@ -29,23 +27,22 @@ history: |
   On Dec. 25, 2023, respective Snapshot proposals passed, making bridged wstETH on zkSync, Mantle, and Linea officially recognized by Lido DAO.
 
 team:
-  - avatar: 
+  - avatar:
     name: Vasiliy Shapovalov
     title: Co-founder and CTO
     twitter: https://twitter.com/_vshapovalov
     linkedin: https://www.linkedin.com/in/vasiliy-shapovalov-91716491/
 
-  - avatar: 
+  - avatar:
     name: Konstantin Lomashuk
     title: Founder of P2P Validator and an Initial Member of Lido
     twitter: https://twitter.com/lomashuk
     linkedin: https://www.linkedin.com/in/lomashuk/
 
-
 social_media:
   twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
     - title: Tweets
-      value: [100,230,300]
+      value: [100, 230, 300]
     - title: Views
       value: [41.54K/8.31K, 87.27K/9.70K, 18.03K/9.01K]
     - title: Likes
@@ -63,16 +60,14 @@ onchain_analysis:
   - title: Recent Transactions
     value: |
       * 0x
-    
+
   - title: Transaction Volume
     value: |
-      * 
+      *
 
   - title: Dex Pools
     value: |
       * 0x
-
-  
 
 financial_analysis:
   protocol_metrics:
@@ -105,38 +100,38 @@ financial_analysis:
 
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
-      value: 
+      value:
     - title: Market cap	Rank
-      value: 
+      value:
     - title: FDV
-      value: 
+      value:
     - title: Turnover rate
-      value: 
+      value:
     - title: Circulating supply
-      value: 
+      value:
     - title: Total supply
-      value: 
+      value:
     - title: Max supply
       value: Unlimited
     - title: All time high
-      value: 
+      value:
     - title: All time high date
-      value: 
+      value:
     - title: Down from all time high
-      value: 
+      value:
     - title: All time low
-      value: 
+      value:
     - title: All time low date
-      value: 
+      value:
     - title: Up from all time low
-      value: 
+      value:
     - title: Risks of depegging
       value: Minimum
   investments:
     - round: "Private token sale"
-      amount: 
+      amount:
       valuation: "$73m"
-      date: '2021-05-05'
+      date: "2021-05-05"
       investors: |
         *  Paradigm
         *  Coinbase Ventures
@@ -145,15 +140,15 @@ financial_analysis:
         *  Alameda Research
         *  DCG
     - round: ""
-      amount: 
+      amount:
       valuation: "$70m"
-      date: '2022-03-03'
+      date: "2022-03-03"
       investors: |
         *  a16z
 
   list_of_investors:
     # - name: 1confirmation
-    #   logo: 
+    #   logo:
 
 security_and_compliance:
   - title: Security Assurance
@@ -169,11 +164,11 @@ security_and_compliance:
       - title: Insurance Coverage
         value: No
       - title: Security Issue History
-        value: 
+        value:
       - title: Resolution of Past Incidents
         value: N.A.
       - title: Multi-Signature Wallets
-        value: 
+        value:
       - title: External Security Partners
         value: Unknown
       - title: Decentralized Security Measures
@@ -183,7 +178,7 @@ security_and_compliance:
       - title: Incident Response Plan
         value: Unknown
       - title: Community Security Awareness
-        value: 
+        value:
       - title: Network Security Measures
         value: Unknown
 
@@ -215,7 +210,7 @@ security_and_compliance:
         value:
       - title: Operational Compliance
         value:
-                  
+
   - title: Technological Details
     value:
       - title: Technical Documents
@@ -277,4 +272,3 @@ security_and_compliance:
       - title: Accountability Mechanisms
         value: |
           Committees report their activities publicly on the Research forum, enhancing transparency and accountability within the Lido DAO ecosystem
-        
