add 3 new fields(must be non-empty & stablecoin_name in upper case) for financial assessment; currently can do: USDT, USDC, PYUSD, FDUSD

--- a/stablecoin/dai/data.yml
+++ b/stablecoin/dai/data.yml
@@ -13,7 +13,9 @@ links:
   linkedin: https://www.linkedin.com/company/makerdao
 whitepaper: https://makerdao.com/en/whitepaper/
 security_report: https://github.com/makerdao/mcd-security/blob/master/Audit%20Reports/TOB_MakerDAO_Final_Report.pdf
-attestation_report:
+attestation_report: 
+audit_firm_name:
+stablecoin_name:
 overview: |
   Maker is a self-described “Multi-Collateral Dai (MCD)” lending protocol designed “to bring stability to the
   cryptocurrency economy.” To achieve this, Maker employs a two-token strategy - MKR and DAI. MKR is the protocol's
