--- a/stablecoin/pyusd/data.yml
+++ b/stablecoin/pyusd/data.yml
@@ -9,7 +9,9 @@ links:
   linkedin: https://www.linkedin.com/company/paypal/
 whitepaper: https://crypto.com/university/what-is-pyusd-paypal-stablecoin
 security_report: https://github.com/paxosglobal/pyusd-contract/blob/master/audit-reports/Trail_of_Bits_Audit_Report.pdf
-attestation_report:
+attestation_report: https://paxos.com/wp-content/uploads/2024/01/PYUSD-Monthly-Stablecoin-Reporting-December-2023-Google-Sheets.pdf
+audit_firm_name: PAXOS
+stablecoin_name: PYUSD
 overview: |
   PYUSD is a USD-backed stablecoin on the Ethereum blockchain. Reserves are held 100% in US dollar deposits, US treasuries and cash equivalents – meaning that customer funds are available for 1:1 redemption with Paxos.
 details:
