--- a/stablecoin/usdc/data.yml
+++ b/stablecoin/usdc/data.yml
@@ -14,7 +14,9 @@ links:
   linkedin: https://www.linkedin.com/company/circle-internet-financial
 whitepaper: https://whitepaper.io/coin/usd-coin
 security_report:
-attestation_report:
+attestation_report: https://www.circle.com/hubfs/USDCAttestationReports/2023/2023%20USDC_Circle%20Examination%20Report%20November%202023.pdf
+audit_firm_name: Deloitte
+stablecoin_name: USDC
 overview: |
   USDC is a tokenized representation of the US Dollar (USD) supported by Circle. USDC aims to be an open,
   interoperable, safe, transparent, and trustworthy stablecoin. Each USDC is collateralized by corresponding
