--- a/stablecoin/usde/data.yml
+++ b/stablecoin/usde/data.yml
@@ -10,6 +10,8 @@ links:
 whitepaper: https://ethena-labs.gitbook.io/ethena-labs/
 security_report:
 attestation_report:
+audit_firm_name:
+stablecoin_name:
 overview: |
   Ethena specializes in offering derivative infrastructure services to leverage staked Ethereum. Their products include USDe, a delta-neutral synthetic dollar with an embedded yield, and Internet Bonds, which are globally accessible floating and fixed-rate USD-denominated bonds. Additionally, they offer Repo Financing for capital-efficient and composable leverage. Ethena's focus is on creating a crypto-native yield-bearing synthetic dollar (USDe) that is independent of the banking system, with stability achieved through delta-neutral hedging across various trading venues.
   They also provide solutions for decentralized money market challenges, ensuring delta-neutral stability, censorship resistance, and scalability without overcollateralization. Ethena's platform allows users to deposit USD, Ethereum, or liquid staking tokens as collateral to create USDe, offering decentralized, scalable, stable assets with returns derived from Ethereum's economic activity and futures markets.
