--- a/stablecoin/fdusd/data.yml
+++ b/stablecoin/fdusd/data.yml
@@ -9,7 +9,9 @@ links:
   linkedin: https://www.linkedin.com/company/first-digital-trust
 whitepaper: https://firstdigitallabs.com/workspace/uploads/FDUSD-Whitepaper-25216064ca0cc8.pdf
 security_report: https://firstdigitallabs.com/workspace/uploads/PeckShield-207912a52540a.pdf
-attestation_report:
+attestation_report: https://firstdigitallabs.com/workspace/uploads/fdusd-attestation-2023-12-31-65a624e163e2a.pdf
+audit_firm_name: Prescient Assurance LLC.
+stablecoin_name: FDUSD
 overview: |
   First Digital USD is a reserve-backed stablecoin issued by First Digital Limited. FDUSD has been issued on Ethereum and the BNB Smart Chain.
 details:
