--- a/stablecoin/frax/data.yml
+++ b/stablecoin/frax/data.yml
@@ -11,6 +11,8 @@ links:
 whitepaper: https://docs.frax.finance/overview
 security_report: https://github.com/trailofbits/publications/blob/master/reviews/2023-05-fraxgov-securityreview.pdf
 attestation_report:
+audit_firm_name:
+stablecoin_name:
 overview: |
   Frax attempts to be the first fractional-algorithmic stablecoin protocol to implement design principles of both collateralized and algorithmic stablecoins. The Frax protocol is a two token system - the stablecoin FRAX, and Frax Shares (FXS), which are used to stabilize the system, accrue seigniorage revenue and fees, as well as provide governance rights. The degree to which FRAX is collateralized is determined by market forces, with the collateral ratio determining the proportion of FRAX outstanding to be backed by collateral, with the remainder in FXS.
 details:
