--- a/stablecoin/tusd/data.yml
+++ b/stablecoin/tusd/data.yml
@@ -10,6 +10,8 @@ links:
 whitepaper: https://www.studocu.com/id/document/universitas-terbuka/teknologi-komunikasi-dan-informasi/tusd-white-paper-cryptocurrency/33454002
 security_report:
 attestation_report:
+audit_firm_name:
+stablecoin_name:
 overview: |
   TrueUSD (TUSD) is a digital currency pegged to the US Dollar, offering real-time attestations of its reserves. It was issued by the TrustToken platform, which currently operates as Archblock. TrueUSD is available on multiple blockchain networks and is used in trading and transfers in cryptocurrency exchanges and DeFi protocols.
 details:
