--- a/stablecoin/usdd/data.yml
+++ b/stablecoin/usdd/data.yml
@@ -10,6 +10,8 @@ links:
 whitepaper: https://usdd.network/USDD-en.pdf
 security_report:
 attestation_report:
+audit_firm_name:
+stablecoin_name:
 overview: |
   USDD is an over-collateralized stablecoin that is issued by the TRON DAO Reserve (TDR), which is also the custodian. The TDR is made up of nine crypto-native institutions. USDD’s value is backed by the over-collateralization of crypto assets under the TDR, including BTC, USDT, USDC, and TRX. The peg is maintained through the Peg Stability Module (PSM) that allows 1:1 transfer of USDD for USDT, USDC, TUSD, and USDJ. The PSM’s USDD funding is controlled by the TRON DAO Reserve. USDD can be minted by the whitelisted institutions of the TDR by depositing TRX.
 details:
