--- a/stablecoin/usdp/data.yml
+++ b/stablecoin/usdp/data.yml
@@ -10,6 +10,8 @@ links:
 whitepaper: https://standard.paxos.com/whitepaper.pdf
 security_report:
 attestation_report:
+audit_firm_name:
+stablecoin_name:
 overview: |
   Paxos Standard is a fiat-collateralized stablecoin. The Paxos Standard tokens (PAX) are issued as ERC-20 tokens on the Ethereum blockchain and are collateralized 1:1 by USD held in Paxos-owned US bank accounts. It is also the one of three stablecoins approved by Wall Street regulators, alongside GUSD and BUSD.
 details:
