--- a/stablecoin/ust/data.yml
+++ b/stablecoin/ust/data.yml
@@ -10,6 +10,8 @@ links:
 whitepaper: https://assets.website-files.com/611153e7af981472d8da199c/618b02d13e938ae1f8ad1e45_Terra_White_paper.pdf
 security_report: https://www.fairyproof.com/doc/TerraCore-Audit-Report-010922.pdf
 attestation_report:
+audit_firm_name:
+stablecoin_name:
 overview: |
   TerraUSD (UST) is an algorithmic stablecoin within the Terra ecosystem which aims to maintain a peg to the US Dollar. UST aims to achieve stability through an elastic supply mechanism enabled by the Terra blockchain's native token, Luna, which is minted or sold based on the demand preferences of the UST token. Due to a significant price reduction in the in the LUNA token, has been unable to maintain its peg to the U.S. Dollar.
 details:
