fixed yml format issues

--- a/staking/RPL/data.yml
+++ b/staking/RPL/data.yml
@@ -1,15 +1,14 @@
 name: Rocket Pool
-description: Rocket Pool is the first truly decentralised Ethereum staking pool. 
+description: Rocket Pool is the first truly decentralised Ethereum staking pool.
 logo: assets/logo.png
 rating: A-
 links:
   website: https://rocketpool.net/
   twitter: https://twitter.com/Rocket_Pool
   discord: https://discordapp.com/invite/tCRG54c
-  telegram: 
+  telegram:
   github: https://github.com/rocket-pool
-whitepaper: 
-  https://docs.rocketpool.net/
+whitepaper: https://docs.rocketpool.net/
 overview: |
   Rocket Pool is a permissionless Ethereum staking protocol whose Staking-as-a-Service (SaaS) solution caters to two groups: ETH Stakers and Node Operators. Rocket Pool enables users to stake and earn rewards on the Ethereum Beacon Chain without having to meet the 32 ETH deposit, hardware, and/or technical requirements to run a validator. Users can stake ETH using Rocket Pool with as little as 0.01 ETH to receive the protocol’s ERC-20 liquid staking derivative token, rETH, representing the value of the underlying staked ETH plus accrued ETH staking rewards
   Node operators with Rocket Pool can operate Beacon Chain validators at a lower capital cost than independently creating an Ethereum validator themselves while also benefitting from additional incentives. Ethereum validators on the Beacon Chain must have 32 ETH staked as collateral to be included in the blockchain’s validation process. To create a Rocket Pool minipool, node operators must only stake 8 or 16 ETH. The remaining 24 or 16 ETH to reach the 32 ETH requirement is sourced from the ETH that users have deposited into Rocket Pool in exchange for rETH.
@@ -51,7 +50,7 @@ history: |
 
   On Jan 30, 2024, the Rocket Pool Grants and Bounties Management Committee (GMC) approved a bounty for development to enable Rocket Pool node operators to join the EigenLayer network.
 team:
-  - avatar: 
+  - avatar:
     name: David Rugendyke
     title: Founder and CEO
     twitter: https://twitter.com/daveruges
@@ -60,7 +59,7 @@ team:
 social_media:
   twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
     - title: Tweets
-      value: [100,230,300]
+      value: [100, 230, 300]
     - title: Views
       value: [41.54K/8.31K, 87.27K/9.70K, 18.03K/9.01K]
     - title: Likes
@@ -78,16 +77,14 @@ onchain_analysis:
   - title: Recent Transactions
     value: |
       * 0x
-    
+
   - title: Transaction Volume
     value: |
-      * 
+      *
 
   - title: Dex Pools
     value: |
       * 0x
-
-  
 
 financial_analysis:
   protocol_metrics:
@@ -116,50 +113,50 @@ financial_analysis:
 
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
-      value: 
+      value:
     - title: Market cap	Rank
-      value: 
+      value:
     - title: FDV
-      value: 
+      value:
     - title: Turnover rate
-      value: 
+      value:
     - title: Circulating supply
-      value: 
+      value:
     - title: Total supply
-      value: 
+      value:
     - title: Max supply
       value: Unlimited
     - title: All time high
-      value: 
+      value:
     - title: All time high date
-      value: 
+      value:
     - title: Down from all time high
-      value: 
+      value:
     - title: All time low
-      value: 
+      value:
     - title: All time low date
-      value: 
+      value:
     - title: Up from all time low
-      value: 
+      value:
     - title: Risks of depegging
       value: Minimum
   investments:
     - round: "Seed"
-      amount: 
-      valuation: 
-      date: '2018-05-14'
+      amount:
+      valuation:
+      date: "2018-05-14"
       investors: |
         *  Consensys
     - round: "Private token sale"
-      amount: 
-      valuation: 
-      date: '2023-08-10'
+      amount:
+      valuation:
+      date: "2023-08-10"
       investors: |
         *  Coinbase Ventures
 
   list_of_investors:
     # - name: 1confirmation
-    #   logo: 
+    #   logo:
 
 security_and_compliance:
   - title: Security Assurance
@@ -171,15 +168,15 @@ security_and_compliance:
       - title: Security Audit Rating
         value: A-
       - title: Bug Bounty Programs
-        value: https://immunefi.com/bounty/rocketpool/, Earn up to $500,000 
+        value: https://immunefi.com/bounty/rocketpool/, Earn up to $500,000
       - title: Insurance Coverage
         value: No
       - title: Security Issue History
-        value: 
+        value:
       - title: Resolution of Past Incidents
         value: N.A.
       - title: Multi-Signature Wallets
-        value: 
+        value:
       - title: External Security Partners
         value: Unknown
       - title: Decentralized Security Measures
@@ -189,7 +186,7 @@ security_and_compliance:
       - title: Incident Response Plan
         value: Unknown
       - title: Community Security Awareness
-        value: 
+        value:
       - title: Network Security Measures
         value: Unknown
 
@@ -221,7 +218,7 @@ security_and_compliance:
         value:
       - title: Operational Compliance
         value:
-                  
+
   - title: Technological Details
     value:
       - title: Technical Documents
@@ -276,4 +273,3 @@ security_and_compliance:
       - title: Accountability Mechanisms
         value: |
           The DAO structure inherently provides a level of accountability through transparency on the blockchain.
-        
