replaced tabs with white space

--- a/staking/sfrxETH/data.yml
+++ b/staking/sfrxETH/data.yml
@@ -8,8 +8,7 @@ links:
   discord:
   telegram: https://t.me/fraxfinance
   github: https://github.com/FraxFinance
-whitepaper:
-  https://docs.frax.finance/
+whitepaper: https://docs.frax.finance/
 overview: |
   Staked Frax Ether (sfrxETH) is a liquid Ethereum (ETH) staking derivative and stablecoin system designed to leverage the Frax Finance ecosystem to maximize staking yield and simplify the Ethereum staking process.
   The core logic of Staked Frax Ether involves three primary components: Frax Ether (frxETH), Staked Frax Ether (sfrxETH), and the Frax ETH Minter. frxETH acts as a stablecoin loosely pegged to ETH, sfrxETH is the version of frxETH which accrues staking yield, and the Frax ETH Minter allows the exchange of ETH for frxETH.
@@ -32,7 +31,7 @@ team:
 social_media:
   twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
     - title: Tweets
-      value: [100,230,300]
+      value: [100, 230, 300]
     - title: Views
       value: [41.54K/8.31K, 87.27K/9.70K, 18.03K/9.01K]
     - title: Likes
@@ -58,8 +57,6 @@ onchain_analysis:
   - title: Dex Pools
     value: |
       * 0x
-
-
 
 financial_analysis:
   protocol_metrics:
@@ -88,7 +85,7 @@ financial_analysis:
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
       value:
-    - title: Market cap	Rank
+    - title: Market cap Rank
       value:
     - title: FDV
       value:
