--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Publish to GitHub Pages
         run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "GitHub Actions"
           git fetch --all
           git checkout gh-pages
           git merge main --allow-unrelated-histories
