add allow empty for git commit

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,5 +32,5 @@ jobs:
           git merge main --allow-unrelated-histories
           # Use the commit message from the triggering event
           COMMIT_MESSAGE=$(echo "${{ github.event.head_commit.message }}")
-          git commit -a -m "publish: ${COMMIT_MESSAGE}"
+          git commit -a --allow-empty -m "publish: ${COMMIT_MESSAGE}"
           git push origin
