--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,10 +27,11 @@ jobs:
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "GitHub Actions"
+          
           git fetch --all
           git checkout gh-pages
-          git merge main --allow-unrelated-histories
+
           # Use the commit message from the triggering event
           COMMIT_MESSAGE=$(echo "${{ github.event.head_commit.message }}")
-          git commit -a --allow-empty -m "publish: ${COMMIT_MESSAGE}"
+          git merge main -m "publish: ${COMMIT_MESSAGE}"
           git push origin gh-pages
