fix yml lint errors

--- a/staking/RPL/data.yml
+++ b/staking/RPL/data.yml
@@ -1,3 +1,4 @@
+---
 name: Rocket Pool
 description: Rocket Pool is the first truly decentralised Ethereum staking pool.
 logo: assets/logo.png
@@ -57,7 +58,7 @@ team:
     linkedin: https://www.linkedin.com/in/david-rugendyke-260a2a60/
 
 social_media:
-  twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
+  twitter:   # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
     - title: Tweets
       value: [100, 230, 300]
     - title: Views
@@ -170,7 +171,7 @@ security_and_compliance:
       - title: Bug Bounty Programs
         value: https://immunefi.com/bounty/rocketpool/, Earn up to $500,000
       - title: Insurance Coverage
-        value: No
+        value: "No"
       - title: Security Issue History
         value:
       - title: Resolution of Past Incidents
