--- a/staking/lido/data.yml
+++ b/staking/lido/data.yml
@@ -1,3 +1,4 @@
+---
 name: LIDO
 description: LIDO provides liquidity to staked tokens, stake any amount of ETH, get daily staking rewards and use your (w)stETH across Ethereum Ecosystem and L2.
 logo: assets/logo.png
@@ -40,7 +41,7 @@ team:
     linkedin: https://www.linkedin.com/in/lomashuk/
 
 social_media:
-  twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
+  twitter:   # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
     - title: Tweets
       value: [100, 230, 300]
     - title: Views
@@ -162,7 +163,7 @@ security_and_compliance:
       - title: Bug Bounty Programs
         value: https://lido.fi/bug-bounty, Earn up to $2,000,000 USD by finding protocol, client and bugs affecting the Lido and Lido on X products.
       - title: Insurance Coverage
-        value: No
+        value: "No"
       - title: Security Issue History
         value:
       - title: Resolution of Past Incidents
