--- a/staking/sfrxETH/data.yml
+++ b/staking/sfrxETH/data.yml
@@ -1,3 +1,4 @@
+---
 name: Staked Frax Ether
 description: Staked Frax Ether (sfrxETH) is a liquid Ethereum (ETH) staking derivative and stablecoin system designed to leverage the Frax Finance ecosystem to maximize staking yield and simplify the Ethereum staking process.
 logo: assets/logo.png
@@ -29,7 +30,7 @@ team:
     linkedin: https://twitter.com/samkazemian
 
 social_media:
-  twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
+  twitter:   # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
     - title: Tweets
       value: [100, 230, 300]
     - title: Views
@@ -135,7 +136,7 @@ security_and_compliance:
       - title: Bug Bounty Programs
         value:
       - title: Insurance Coverage
-        value: No
+        value: "No"
       - title: Security Issue History
         value:
       - title: Resolution of Past Incidents
