--- a/staking/wbeth/data.yml
+++ b/staking/wbeth/data.yml
@@ -1,3 +1,4 @@
+---
 name: Binance staked ETH
 description: A token created by depositing BETH into the BETH wrapper. Each WBETH represents 1 BETH (1:1 to staked ETH) plus all of its accrued ETH2.0 staking rewards
 logo: assets/logo.png
@@ -26,7 +27,7 @@ team:
     linkedin: https://www.linkedin.com/in/kenziwang/
 
 social_media:
-  twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
+  twitter:   # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
     - title: Tweets
       value: [100, 230, 300]
     - title: Views
@@ -134,7 +135,7 @@ security_and_compliance:
       - title: Bug Bounty Programs
         value:
       - title: Insurance Coverage
-        value: No
+        value: "No"
       - title: Security Issue History
         value:
       - title: Resolution of Past Incidents
