--- a/.github/workflows/pyinsightic.yml
+++ b/.github/workflows/pyinsightic.yml
@@ -65,9 +65,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_SECRET }}
 
+      - name: Install NLTK Data
+        run: |
+          python -m nltk.downloader punkt stopwords vader_lexicon
+
       - name: Run pyinsightic analysis
         run: |
-          cd stablecoin && python main.py
+          cd stablecoin && (python main.py 2>&1 | tee analysis.log)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -76,21 +80,46 @@ jobs:
           DUNE_API_KEY: ${{ secrets.DUNE_API_KEY }}
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
 
+      - name: Upload logs as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: analysis-logs
+          path: stablecoin/analysis.log
+
       - name: Commit and Push results
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "GitHub Actions"
-          # Add the results and check if there are changes; if so, commit them.
-          git add */sosovalue.json
-          git diff --cached --exit-code || git commit -m "Update sosovalue analysis results"
-          git add */linkedin.json
-          git diff --cached --exit-code || git commit -m "Update linkedin analysis results"
-          git add */twitter.json
-          git diff --cached --exit-code || git commit -m "Update twitter analysis results"
-          git add */smartcontractvalidator.json
-          git diff --cached --exit-code || git commit -m "Update smart contract validator analysis results"
-          git add */stablecoin.json
-          git diff --cached --exit-code || git commit -m "Update stablecoin analysis results"
-          git add */securityassessment.json
-          git diff --cached --exit-code || git commit -m "Update security assessment analysis results"
-          git push
+
+          # Stash changes before checking out
+          git stash push -m "Stashing changes before switching branches"
+
+          # Checkout the gh-pages branch
+          git fetch origin gh-pages
+          git checkout gh-pages || git checkout -b gh-pages
+          git pull origin gh-pages --rebase
+
+          # Apply stashed changes (if any) to gh-pages branch
+          git stash pop || true
+
+          shopt -s globstar
+          FILES_TO_COMMIT=""
+          for FILE_PATTERN in **/*.json; do
+            if compgen -G "$FILE_PATTERN" > /dev/null; then
+              FILES_TO_COMMIT="$FILES_TO_COMMIT $(echo $FILE_PATTERN)"
+            else
+              echo "No files matching $FILE_PATTERN to commit."
+            fi
+          done
+
+          if [ -n "$FILES_TO_COMMIT" ]; then
+            echo "Adding files to commit: $FILES_TO_COMMIT"
+            git add $FILES_TO_COMMIT
+
+            # Commit and push to the gh-pages branch
+            git commit -m "Update analysis results"
+            git push origin gh-pages
+          else
+            echo "No changes to commit."
+          fi
+        shell: bash
