--- a/.github/workflows/pyinsightic.yml
+++ b/.github/workflows/pyinsightic.yml
@@ -79,6 +79,8 @@ jobs:
           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
           DUNE_API_KEY: ${{ secrets.DUNE_API_KEY }}
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
+          ZAN_API_TOKEN: ${{ secrets.ZAN_API_TOKEN }}
+          ZAN_CHAIN_RPC_TOKEN: ${{ secrets.ZAN_CHAIN_RPC_TOKEN }}
 
       - name: Upload logs as artifact
         uses: actions/upload-artifact@v3
