updated names of scheduler

--- a/.github/workflows/zan_scheduler.yml
+++ b/.github/workflows/zan_scheduler.yml
@@ -1,13 +1,10 @@
 ---
-name: Run PyInsightic
+name: Run PyInsightic Zan Scheduler
 
 on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 */2 * *'
-  push:
-    branches:
-      - main
 
 jobs:
   yaml-format-check:
