--- a/.github/workflows/zan_scheduler.yml
+++ b/.github/workflows/zan_scheduler.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: gh-pages
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -34,6 +37,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: gh-pages
 
       - name: Set up Python
         uses: actions/setup-python@v5
