--- a/cex/binance/data.yml
+++ b/cex/binance/data.yml
@@ -1,7 +1,8 @@
-binance:
+cex:
+  name: "Binance"
   type: "Centralized Exchange"
   registration: "Cayman Islands"
-  logo: assets/logo.png
+  logo: assets/binance-logo.svg
   established: 2017
   website_info:
     url: "https://www.binance.com/"
