--- a/cex/coinbase/data.yml
+++ b/cex/coinbase/data.yml
@@ -1,4 +1,4 @@
-cex
+cex:
   name: "coinbase"
   type: "Centralized Exchange"
   registration: "United States"
@@ -37,7 +37,7 @@ cex
     fee_structure:
       maker_taker_fee: "0.00% to 0.40% for maker, 0.05% to 0.60% for taker"
       zero_fee_pairs: N/A
-    deposit: 
+    deposit:
       - "Cryptocurrencies - Free"
       - "USD Wire Transfer - $10"
       - "USD ACH Transfer - Free"
