--- a/.github/workflows/pyinsightic_scheduler.yml
+++ b/.github/workflows/pyinsightic_scheduler.yml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Run pyinsightic analysis
         run: |
-          cd stablecoin && (python scheduler.py 2>&1 | tee analysis.log)
+          python scheduler.py 2>&1 | tee analysis.log
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
