--- a/.github/workflows/pyinsightic.yml
+++ b/.github/workflows/pyinsightic.yml
@@ -71,7 +71,7 @@ jobs:
 
       - name: Run pyinsightic analysis
         run: |
-          cd stablecoin && (python main.py 2>&1 | tee analysis.log)
+          python main.py 2>&1 | tee analysis.log
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
