--- a/.github/workflows/pyinsightic_scheduler.yml
+++ b/.github/workflows/pyinsightic_scheduler.yml
@@ -85,6 +85,7 @@ jobs:
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
           ZAN_API_TOKEN: ${{ secrets.ZAN_API_TOKEN }}
           ZAN_CHAIN_RPC_TOKEN: ${{ secrets.ZAN_CHAIN_RPC_TOKEN }}
+          OKLINK_API_TOKEN: ${{ secrets.OKLINK_API_TOKEN }}
 
       - name: Upload logs as artifact
         uses: actions/upload-artifact@v3
