add overview and history

--- a/cex/HTX/data.yml
+++ b/cex/HTX/data.yml
@@ -4,6 +4,8 @@ type: "Centralized Exchange"
 registration: "Seychelles"
 logo: assets/HTX-Logo.jpeg
 established: 2013
+overview: "HTX is a prominent Bitcoin exchange that provides a comprehensive suite of services including spot trading, futures trading, derivatives, and earning options, catering to a wide array of user needs in the cryptocurrency market. With over 700 virtual assets available for trading, HTX offers industry-leading annual percentage yields (APYs) and a variety of tools designed to enhance the trading experience. The platform boasts a significant user base with 45+ million users globally and records an impressive 24h trading volume of over $3 billion. HTX not only facilitates trading but also focuses on community engagement and educational advancements through offers like rewards for new sign-ups and educational resources through HTX Futures Community."
+history: "Since its inception in 2013, HTX has established itself as a top choice for cryptocurrency traders worldwide. The platform has continuously evolved to include a wide range of financial products that cater to the needs of its diverse user base—from casual traders to institutional clients. HTX has emphasized security, compliance, and user experience, adopting global standards and obtaining necessary licenses to operate across different jurisdictions. Over the years, it has expanded its service offerings to include innovative trading options, like copy trading and trading bots, alongside traditional trading methods. This evolution reflects HTX's commitment to staying at the forefront of the cryptocurrency exchange market while fostering an inclusive and educational trading environment."
 website_info:
   url: "https://www.htx.com/en-us/"
 trading_information:
