--- a/cex/LBank/data.yml
+++ b/cex/LBank/data.yml
@@ -4,6 +4,8 @@ type: "Centralized Exchange"
 registration: "British Virgin Islands"
 logo: assets/lbank-logo.svg
 established: 2015
+overview: "LBank Exchange has set up offices in different countries to deliver better services in more places, and the Operation Office is in Indonesia. LBank Exchange currently supports 50+ fiat currencies, including USD, EUR, GBP, JPY,  CAD, AUD, RUB, INR, AED, etc.; Purchase of major digital assets, including BTC, ETH, USDT, etc.; and 20+ payment methods, including Master Card, Visa, Google Play, ApplePay, Bank Transfer, etc."
+history: "Founded in 2015, LBank Exchange (PT LBK TEKNOLOGY INDONESIA) is a top cryptocurrency trading platform with licenses of NFA, MSB, and Canada MSB. LBank Exchange provides global users with secure, professional, and convenient products and services, including Cryptocurrency Trading, Derivatives, Staking, NFT, and LBK Labs investment"
 website_info:
   url: "https://www.lbank.com/"
 trading_information:
