--- a/cex/bybit/data.yml
+++ b/cex/bybit/data.yml
@@ -4,6 +4,8 @@ type: "Centralized Exchange"
 registration: "British Virgin Islands"
 logo: assets/bybit-3.svg
 established: 2018
+overview: "Bybit, branded as #TheCryptoArk and a gateway to Web3, has established itself as a leading force in the cryptocurrency exchange landscape. With over 20 million users globally and managing a daily average trading volume exceeding $10 billion, Bybit operates round the clock supporting customers across more than 160 countries. The platform is dedicated to unleashing the full potential of crypto and Web3 through innovative tools, robust support, and varied opportunities for its users. In its commitment to providing exemplary service, Bybit recently secured roots in Dubai with a new headquarters and an MVP license, further elevating its trusted status in the financial technology sphere."
+history: "Bybit has shown remarkable growth and innovation since its inception in 2018, starting with launching the BTCUSD Inverse Perpetual Contract by a team of ten pioneers. By 2019, it celebrated reaching break-even, buoyed by 5,000 early adopters and handling 10% of the global Bitcoin trading volume. In subsequent years, Bybit continued to exceed milestones, including surpassing $70 billion in daily trading volume in 2021 and initiating #TheCryptoArk for blockchain enthusiasts. Bybit's commitment to transparency and user support is evident in their 2022 achievements, such as launching USDC-settled Options contracts and partnering with Oracle Red Bull Racing. The platform's regulatory compliance is overseen by multiple authorities, including the Virtual Assets Regulatory Authority in Dubai, ensuring a secure and reliable trading environment."
 website_info:
   url: "https://www.bybit.com/"
 trading_information:
