--- a/cex/Bitget/data.yml
+++ b/cex/Bitget/data.yml
@@ -4,6 +4,8 @@ type: "Centralized Exchange"
 registration: "Seychelles"
 logo: assets/bitget.svg
 established: 2018
+overview: "Bitget is a comprehensive crypto trading platform founded in 2018 by pioneers convinced of a future driven by blockchain technology. Designed to empower users with smart, secure, one-stop crypto investment solutions, Bitget has rapidly developed into a significant player in the cryptocurrency space. It boasts the title of being the largest crypto copy trading platform globally, with over 25 million registered users and a staggering daily trading volume of 10 billion USDT. The platform offers a range of services including spot trading, futures trading, and unique educational resources aimed at enhanced financial decisions, underpinned by a strong focus on user-centric values, integrity, and open communication."
+history: "Bitget’s roots trace back to a dedicated team with a background in traditional finance who explored blockchain technology in 2015. Officially founded amid the bear market of 2018 after its founders studied the Bitcoin whitepaper and Ethereum ecosystem, Bitget emerged from the conviction that cryptocurrency would significantly influence future financial systems and potentially aid unbanked populations. Despite the market's volatility, Bitget was part of the minority who persisted, focusing on long-term growth and product innovation. Today, the platform emphasizes achieving a more equitable world through crypto evolution, with a mission to enable secure, efficient, and smart digital transactions globally. The team is globally diverse with over 1500 employees from 60 countries, reinforcing its extensive reach and impact in the crypto sector."
 website_info:
   url: "https://www.bitget.com/"
 trading_information:
