--- a/cex/Crypto.com/data.yml
+++ b/cex/Crypto.com/data.yml
@@ -4,6 +4,8 @@ type: "Centralized Exchange"
 registration: "Singapore"
 logo: assets/crypto.com-logo.svg
 established: 2019
+overview: "Crypto.com is a leading cryptocurrency platform with a visionary mission to accelerate the global transition to cryptocurrency, aiming to incorporate "Cryptocurrency in Every Wallet™". The service emphasizes the transformative potential of cryptocurrencies and Web3 in creating a more equitable digital future, where users maintain control over their money, data, and identity. As the world’s platform reaches millions, including 80 million users across 90 countries, Crypto.com offers extensive features such as Crypto Earn, Crypto.com Pay, and a varied educational segment to guide user decisions in the crypto space."
+history: "Founded in 2018, Crypto.com has quickly emerged as a significant entity in the digital payments and cryptocurrency markets. The platform was conceived with the belief that the future internet, powered by blockchain and Web3 technologies, will ensure fair participation and ownership by all users involved—builders, creators, and consumers. Crypto.com operates under stringent regulatory guidance such as from the Monetary Authority of Singapore, showcasing commitment to compliance and user security. With a global team of over 1500 individuals from around the world, Crypto.com continuously strives to innovate and adapt in the fast-paced cryptocurrency environment. The founding team, including Kris Marszalek as CEO, encapsulates a diverse mix of expertise, driving the platform towards its ambitious vision of a crypto-empowered world."
 website_info:
   url: "https://crypto.com/exchange"
 trading_information:
