--- a/cex/OKX/data.yml
+++ b/cex/OKX/data.yml
@@ -4,6 +4,8 @@ type: "Centralized Exchange"
 registration: "Seychelles"
 logo: assets/okx-1.svg
 established: 2017
+overview: "OKX is a prominent cryptocurrency exchange that offers a broad spectrum of advanced financial services by leveraging blockchain technology. The platform provides users with a wide array of tokens and trading pairs, ensuring robust trading opportunities in spot, margin, expiry, options, perpetual futures trading, along with DeFi, lending, and mining services. With its aim to accommodate a global audience, OKX caters to millions of users across more than 100 countries. The exchange is dedicated to reshaping money, the financial system, and society by promoting the utility and adoption of cryptocurrency, thus contributing to individual freedom and dignity."
+history: "Since its founding, OKX has positioned itself as an innovative force in the crypto trading sphere. It strives to empower users with reliable technology for smart trading and investment decisions, emphasized by their commitment to providing seamless and ultra-low latency API connectivity and other infrastructure products. The exchange has a clear vision to make a tangible impact on money, the financial system, and the internet through the widespread adoption of crypto, asserting itself as a significant player among the leading crypto exchanges globally by volume. Over the years, OKX has shown a remarkable commitment to advancing the global understanding and adoption of cryptocurrencies, further solidifying its position at the forefront of the digital currency revolution."
 website_info:
   url: "https://www.okx.com/"
 trading_information:
