fix yaml warning

--- a/cex/Gate.io/data.yml
+++ b/cex/Gate.io/data.yml
@@ -51,23 +51,23 @@ accepted_payment_methods:
   - Apple Pay
   - Google Pay
 margin_trading:
-  availability: Yes
+  availability: "Yes"
   leverage: "Up to 10X"
 derivatives_products:
   options_description: "Supports spot and margin trading, as well as futures and derivatives for investors."
 trust_score: 9/10
 cybersecurity_details:
-  penetration_test: Yes
-  proof_of_funds: Yes
-  bug_bounty: Yes
+  penetration_test: "Yes"
+  proof_of_funds: "Yes"
+  bug_bounty: "Yes"
   last_updated: "2024-03-29"
 api_coverage:
   grade: "A"
-  tickers_data: Yes
-  historical_trades_data: Yes
-  orderbook_data: Yes
-  trading_via_api: Yes
-  ohlc_data: Yes
-  websocket: Yes
-  public_documentation: Yes
+  tickers_data: "Yes"
+  historical_trades_data: "Yes"
+  orderbook_data: "Yes"
+  trading_via_api: "Yes"
+  ohlc_data: "Yes"
+  websocket: "Yes"
+  public_documentation: "Yes"
   last_updated: "2019-08-19"
