--- a/cex/HTX/data.yml
+++ b/cex/HTX/data.yml
@@ -53,23 +53,23 @@ accepted_payment_methods:
   - Debit/Credit Card
   - Third Party
 margin_trading:
-  availability: Yes
+  availability: "Yes"
   leverage: "Up to 200X for derivatives, 3X for cross margin"
 derivatives_products:
   options_description: "Supports ICO tokens and offers a broad assortment of cryptocurrencies, including spot trading, margin trading, futures trading, derivatives trading, staking, crypto loans, and more."
 trust_score: 9/10
 cybersecurity_details:
-  penetration_test: Yes
-  proof_of_funds: Yes
-  bug_bounty: Yes
+  penetration_test: "Yes"
+  proof_of_funds: "Yes"
+  bug_bounty: "Yes"
   last_updated: "2023-08-30"
 api_coverage:
   grade: "A"
-  tickers_data: Yes
-  historical_trades_data: Yes
-  orderbook_data: Yes
-  trading_via_api: Yes
-  ohlc_data: Yes
-  websocket: Yes
-  public_documentation: Yes
+  tickers_data: "Yes"
+  historical_trades_data: "Yes"
+  orderbook_data: "Yes"
+  trading_via_api: "Yes"
+  ohlc_data: "Yes"
+  websocket: "Yes"
+  public_documentation: "Yes"
   last_updated: "2019-08-19"
