--- a/cex/Kraken/data.yml
+++ b/cex/Kraken/data.yml
@@ -61,23 +61,23 @@ fees:
 accepted_payment_methods:
   - Wire transfer
 margin_trading:
-  availability: Yes
+  availability: "Yes"
   leverage: "Up to 5X depending on the currency pair"
 derivatives_products:
   options_description: "Offers spot trading, margin trading, futures, indices, stakings, OTC and an upcoming NFT marketplace."
 trust_score: 10/10
 cybersecurity_details:
-  penetration_test: Yes
-  proof_of_funds: Yes
-  bug_bounty: Yes
+  penetration_test: "Yes"
+  proof_of_funds: "Yes"
+  bug_bounty: "Yes"
   last_updated: "2023-06-21"
 api_coverage:
   grade: "A"
-  tickers_data: Yes
-  historical_trades_data: Yes
-  orderbook_data: Yes
-  trading_via_api: Yes
-  ohlc_data: Yes
-  websocket: Yes
-  public_documentation: Yes
+  tickers_data: "Yes"
+  historical_trades_data: "Yes"
+  orderbook_data: "Yes"
+  trading_via_api: "Yes"
+  ohlc_data: "Yes"
+  websocket: "Yes"
+  public_documentation: "Yes"
   last_updated: "2019-09-25"
