--- a/cex/coinbase/data.yml
+++ b/cex/coinbase/data.yml
@@ -56,7 +56,7 @@ accepted_payment_methods:
   - "Bank Account (US only)"
   - "Deposit Credit/Debit Card"
 margin_trading:
-  availability: No
+  availability: "No"
   leverage: N/A
 derivatives_products:
   options_description: N/A
@@ -64,15 +64,15 @@ trust_score: 10/10
 cybersecurity_details:
   penetration_test: N/A
   proof_of_funds: Deloitte - 31 Dec 2021
-  bug_bounty: Yes
+  bug_bounty: "Yes"
   last_updated: "2023-06-21"
 api_coverage:
   grade: "A"
-  tickers_data: Yes
-  historical_trades_data: Yes
-  orderbook_data: Yes
-  trading_via_api: Yes
-  ohlc_data: Yes
-  websocket: Yes
-  public_documentation: Yes
+  tickers_data: "Yes"
+  historical_trades_data: "Yes"
+  orderbook_data: "Yes"
+  trading_via_api: "Yes"
+  ohlc_data: "Yes"
+  websocket: "Yes"
+  public_documentation: "Yes"
   last_updated: "2023-01-10"
