--- a/cex/deribit/data.yml
+++ b/cex/deribit/data.yml
@@ -35,7 +35,7 @@ fees:
   options_taker_fee: "0.04% of underlying or 0.0004BTC per option"
   max_option_fee: "12.5% of the option's price"
   liquidation_extra_fee: 0.30%
-margin_trading: Yes
+margin_trading: "Yes"
 financial_reserves: $3,452,253,101.26
 token_allocation:
   BTC: 68.04%
