--- a/cex/bitfinex/data.yml
+++ b/cex/bitfinex/data.yml
@@ -55,25 +55,25 @@ fees:
 accepted_payment_methods:
   - "Wire transfer"
 margin_trading:
-  availability: Yes
+  availability: "Yes"
   leverage: "Up to 10X"
 derivatives_products:
   description: "Offers margin lending, margin funding, paired trading, OTC trading and more."
 trust_score: 9/10
 cybersecurity_details:
-  penetration_test: Yes
-  proof_of_funds: Yes
-  bug_bounty: Yes
+  penetration_test: "Yes"
+  proof_of_funds: "Yes"
+  bug_bounty: "Yes"
   last_updated: "2024-03-26"
 api_coverage:
   grade: "A"
-  tickers_data: Yes
-  historical_trades_data: Yes
-  orderbook_data: Yes
-  trading_via_api: Yes
-  ohlc_data: Yes
-  websocket: Yes
-  public_documentation: Yes
+  tickers_data: "Yes"
+  historical_trades_data: "Yes"
+  orderbook_data: "Yes"
+  trading_via_api: "Yes"
+  ohlc_data: "Yes"
+  websocket: "Yes"
+  public_documentation: "Yes"
   last_updated: "2019-08-19"
 products_offered:
   - "Spot trading"
