--- a/cex/Bitget/data.yml
+++ b/cex/Bitget/data.yml
@@ -41,7 +41,7 @@ restricted_countries:
 fees:
   fee_structure:
     maker_taker_fee: "Spot: 0.1% (Maker and Taker), reduced to 0.08% with BGB payment. Futures: Makers 0.02%, Takers 0.06%"
-  deposit: Yes
+  deposit: "Yes"
   withdrawal_fees: "Varies by asset"
 accepted_payment_methods:
   - P2P
@@ -49,23 +49,23 @@ accepted_payment_methods:
   - Advcash Wallet
   - SEPA
 margin_trading:
-  availability: Yes
+  availability: "Yes"
   leverage: "Up to 125X for futures, 10X for spot trading"
 derivatives_products:
   options_description: "Includes crypto-to-crypto trading, spot trading, futures trading, margin trading, copy trading."
 trust_score: 9/10
 cybersecurity_details:
-  penetration_test: Yes
-  proof_of_funds: Yes
-  bug_bounty: Yes
+  penetration_test: "Yes"
+  proof_of_funds: "Yes"
+  bug_bounty: "Yes"
   last_updated: "2023-10-05"
 api_coverage:
   grade: "A"
-  tickers_data: Yes
-  historical_trades_data: Yes
-  orderbook_data: Yes
-  trading_via_api: Yes
-  ohlc_data: Yes
-  websocket: Yes
-  public_documentation: Yes
+  tickers_data: "Yes"
+  historical_trades_data: "Yes"
+  orderbook_data: "Yes"
+  trading_via_api: "Yes"
+  ohlc_data: "Yes"
+  websocket: "Yes"
+  public_documentation: "Yes"
   last_updated: "2020-08-13"
