--- a/cex/LBank/data.yml
+++ b/cex/LBank/data.yml
@@ -57,23 +57,23 @@ accepted_payment_methods:
   - DuitNow
   - GoJek
 margin_trading:
-  availability: Yes
+  availability: "Yes"
   leverage: "Up to 125X for derivatives"
 derivatives_products:
   options_description: "Includes spot and margin trading, crypto futures, ETFs trading, and options alongside professional asset management services."
 trust_score: 8/10
 cybersecurity_details:
-  penetration_test: Yes
-  proof_of_funds: Yes
-  bug_bounty: Yes
+  penetration_test: "Yes"
+  proof_of_funds: "Yes"
+  bug_bounty: "Yes"
   last_updated: "2023-07-25"
 api_coverage:
   grade: "A"
-  tickers_data: Yes
-  historical_trades_data: Yes
-  orderbook_data: Yes
-  trading_via_api: Yes
-  ohlc_data: Yes
-  websocket: Yes
-  public_documentation: Yes
+  tickers_data: "Yes"
+  historical_trades_data: "Yes"
+  orderbook_data: "Yes"
+  trading_via_api: "Yes"
+  ohlc_data: "Yes"
+  websocket: "Yes"
+  public_documentation: "Yes"
   last_updated: "2019-08-19"
