--- a/cex/binance/data.yml
+++ b/cex/binance/data.yml
@@ -92,23 +92,23 @@ accepted_payment_methods:
   - Apple Pay
   - Google Pay
 margin_trading:
-  availability: Yes
+  availability: "Yes"
   leverage: "Up to 10X on Binance Margin"
 derivatives_products:
   options_description: "Traders can use Binance Futures, settled in USDT, BUSD or other cryptocurrencies and Binance Options to leverage on their trades."
 trust_score: 9/10
 cybersecurity_details:
-  penetration_test: Yes
-  proof_of_funds: Yes
-  bug_bounty: Yes
+  penetration_test: "Yes"
+  proof_of_funds: "Yes"
+  bug_bounty: "Yes"
   last_updated: "2023-06-21"
 api_coverage:
   grade: "A"
-  tickers_data: Yes
-  historical_trades_data: Yes
-  orderbook_data: Yes
-  trading_via_api: Yes
-  ohlc_data: Yes
-  websocket: Yes
-  public_documentation: Yes
+  tickers_data: "Yes"
+  historical_trades_data: "Yes"
+  orderbook_data: "Yes"
+  trading_via_api: "Yes"
+  ohlc_data: "Yes"
+  websocket: "Yes"
+  public_documentation: "Yes"
   last_updated: "2020-04-03"
