--- a/cex/bybit/data.yml
+++ b/cex/bybit/data.yml
@@ -44,7 +44,7 @@ restricted_countries:
 fees:
   fee_structure:
     maker_taker_fee: "Spot: 0.10%, Derivatives: Maker: 0.01% - 0%, Taker: 0.06% - 0.03%"
-  deposit: Yes
+  deposit: "Yes"
   withdrawal_fees: "Varies by asset"
 accepted_payment_methods:
   - P2P
@@ -52,23 +52,23 @@ accepted_payment_methods:
   - Advcash Wallet
   - Wire Transfer
 margin_trading:
-  availability: Yes
+  availability: "Yes"
   leverage: "Up to 100X for derivatives"
 derivatives_products:
   options_description: "Includes USDT perpetuals, USDC perps, inverse perps, futures, USDC options, leveraged tokens."
 trust_score: 10/10
 cybersecurity_details:
-  penetration_test: Yes
-  proof_of_funds: Yes
-  bug_bounty: Yes
+  penetration_test: "Yes"
+  proof_of_funds: "Yes"
+  bug_bounty: "Yes"
   last_updated: "2023-07-21"
 api_coverage:
   grade: "A"
-  tickers_data: Yes
-  historical_trades_data: Yes
-  orderbook_data: Yes
-  trading_via_api: Yes
-  ohlc_data: Yes
-  websocket: Yes
-  public_documentation: Yes
+  tickers_data: "Yes"
+  historical_trades_data: "Yes"
+  orderbook_data: "Yes"
+  trading_via_api: "Yes"
+  ohlc_data: "Yes"
+  websocket: "Yes"
+  public_documentation: "Yes"
   last_updated: "2021-11-29"
