--- a/.github/workflows/pyinsightic_scheduler_every_three_days.yml
+++ b/.github/workflows/pyinsightic_scheduler_every_three_days.yml
@@ -1,10 +1,10 @@
 ---
-name: Run PyInsightic Scheduler Bi Daily
+name: Run PyInsightic Scheduler Once Every 3 Days
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 16 */2 * *'
+    - cron: '0 16 */3 * *'
 
 jobs:
   yaml-format-check:
@@ -75,7 +75,7 @@ jobs:
 
       - name: Run pyinsightic analysis
         run: |
-          python scheduler_bi_daily.py 2>&1 | tee analysis.log
+          python scheduler_every_three_days.py 2>&1 | tee analysis.log
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
